2001-11-01  Cristy  <cristy@mystic.es.dupont.com>
	* Convert's -flatten, -average, etc. failed with an assert error.

2001-10-30  Cristy  <cristy@mystic.es.dupont.com>
	* Added support for On-the-air bitmap.

2001-09-29  Glenn  <glennrp@home.kom>
        * When the delay setting for an image is greater than 5cs,
          duplicate frames are inserted to achieve the desired delay
          while creating MPEG files (contributed by Lawrence Livermore
          National Laboratory (LLNL)).

2001-10-29  Cristy  <cristy@mystic.es.dupont.com>
	* ImageMagick now has a registry for storing image blobs.

2001-10-26  Cristy  <cristy@mystic.es.dupont.com>
	* Added VMS patches (thanks to Jouk Jansen).

2001-10-25 Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * Fixed parsing bug for decorate #FFFFFF.

2001-10-22 Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * Added tests for mpeg2 library to configure.

2001-10-22  Cristy  <cristy@mystic.es.dupont.com>
	* Added a MPEG coder module.
	* Added ImageType member to the image_info structure (suggested
	  by Glenn)

2001-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * Eliminated libMagick.so dependency on libxml by not listing
          -lxml when doing modules link.

2001-10-18  Cristy  <cristy@mystic.es.dupont.com>
	* Eliminated the libMagick.so dependancy on libtiff by moving
	  Huffman2DEncodeImage() from magick/compress.c to coders/pdf.c,
	  coders/ps2.c and coders/ps3.c (suggested by Bob Friesenhahn).
          This change has the side-effect of elminating dependency
          on libpng and libjpeg as well (which libtiff may depend on).

2001-10-16  Cristy  <cristy@mystic.es.dupont.com>
	* Convert now supports -channel {Cyan,Magenta,Yellow,Black}.

2001-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * coders/wmf.c updated for libwmf 0.2.  Plenty of bugs
          remain within.

2001-10-11  Cristy  <cristy@mystic.es.dupont.com>