@@ -23,6 +23,9 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-11-02  Cristy  <cristy@mystic.es.dupont.com>
+	* Typecast offset to unsigned long in coders/pdf.c.
+
 2001-11-01  Cristy  <cristy@mystic.es.dupont.com>
 	* Convert's -flatten, -average, etc. failed with an assert error.
 
